objects/Rating_Header__c.object
<CustomObject>
    <fields>
        <fullName>A18_000__c</fullName>
        <label>A18+ (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A18_34_000__c</fullName>
        <label>A18-34 (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A18_34__c</fullName>
        <label>A18-34</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A18_49_000__c</fullName>
        <label>A18-49 (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A18_49__c</fullName>
        <label>A18-49</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A18__c</fullName>
        <label>A18+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A25_34_000__c</fullName>
        <label>A25-34 (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A25__c</fullName>
        <label>A25+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A35__c</fullName>
        <label>A35+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actuals_Estimates__c</fullName>
        <label>Actuals/Estimates</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actuals</fullName>
                </value>
                <value>
                    <fullName>Estimates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BC_74_Factor_50_HH_000__c</fullName>
        <inlineHelpText>99% Impressions x .50</inlineHelpText>
        <label>BC 74% Factor .50 HH (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BC_74_Factor_50_HH__c</fullName>
        <label>BC 74% Factor .50 HH</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BC_74_Factor_66__c</fullName>
        <label>BC 74% Factor .66 HH</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Cunningham_74_66__c</fullName>
        <inlineHelpText>99% Impressions  x .66</inlineHelpText>
        <label>BC 74% Factor .66 HH (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bounce_Daypart__c</fullName>
        <label>Bounce Daypart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ROS-</fullName>
                </value>
                <value>
                    <fullName>MS 6a-9a</fullName>
                </value>
                <value>
                    <fullName>MS 9a-6p</fullName>
                </value>
                <value>
                    <fullName>MS 6p-12a</fullName>
                </value>
                <value>
                    <fullName>MS 12a-3a</fullName>
                </value>
                <value>
                    <fullName>MS 3a-6a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Est_Median_Age__c</fullName>
        <label>Est Median Age</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F18_000__c</fullName>
        <label>F18+ (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F18_34_000__c</fullName>
        <label>F18-34 (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F18_34__c</fullName>
        <label>F18-34</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F18_49_000__c</fullName>
        <label>F18-49 (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F18_49__c</fullName>
        <label>F18-49</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F18__c</fullName>
        <label>F18+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F25_49_000__c</fullName>
        <label>F25-49 (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F25__c</fullName>
        <label>F25+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F35__c</fullName>
        <label>F35+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH_RTG__c</fullName>
        <label>HH</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HH__c</fullName>
        <label>HH (000)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M18_000__c</fullName>
        <label>M18+ (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M18_34_000__c</fullName>
        <label>M18-34 (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M18_34__c</fullName>
        <label>M18-34</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M18_49_000__c</fullName>
        <label>M18-49 (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M18_49__c</fullName>
        <label>M18-49</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M18__c</fullName>
        <label>M18+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M25_49_000__c</fullName>
        <label>M25-49 (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M25__c</fullName>
        <label>M25+</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M35__c</fullName>
        <label>M35+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Methodology__c</fullName>
        <label>Methodology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NSI</fullName>
                </value>
                <value>
                    <fullName>NTI</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>Rentrak</fullName>
                </value>
                <value>
                    <fullName>Live+SD</fullName>
                </value>
                <value>
                    <fullName>Live+3Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P12_17_000__c</fullName>
        <label>P12-17 (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P12_17__c</fullName>
        <label>P12-17</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2_000__c</fullName>
        <label>P2+ (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2_11_000__c</fullName>
        <label>P2-11 (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2_11__c</fullName>
        <label>P2-11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2__c</fullName>
        <label>P2+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P6_11_000__c</fullName>
        <label>P6-11 (000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipName>Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RTG_Count__c</fullName>
        <label>RTG Count</label>
        <summaryForeignKey>Rating_Detail__c.Rating_Header__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2008 - 2009</fullName>
                </value>
                <value>
                    <fullName>2009 - 2010</fullName>
                </value>
                <value>
                    <fullName>2010 - 2011</fullName>
                </value>
                <value>
                    <fullName>2011 - 2012</fullName>
                </value>
                <value>
                    <fullName>2012 - 2013</fullName>
                </value>
                <value>
                    <fullName>2013 - 2014</fullName>
                </value>
                <value>
                    <fullName>2014 - 2015</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Rating Header</label>
    <listViews>
        <fullName>Better_2012_2013</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>Actuals_Estimates__c</columns>
        <columns>Methodology__c</columns>
        <columns>RTG_Count__c</columns>
        <columns>HH_RTG__c</columns>
        <columns>HH__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>better tv</value>
        </filters>
        <label>Better 2012 - 2013</label>
    </listViews>
    <listViews>
        <fullName>Bill_Cunningham_2012_2013</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>Actuals_Estimates__c</columns>
        <columns>Methodology__c</columns>
        <columns>Bounce_Daypart__c</columns>
        <columns>HH_RTG__c</columns>
        <columns>HH__c</columns>
        <columns>BC_74_Factor_50_HH__c</columns>
        <columns>BC_74_Factor_50_HH_000__c</columns>
        <columns>BC_74_Factor_66__c</columns>
        <columns>Bill_Cunningham_74_66__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>bill cunningham</value>
        </filters>
        <label>Bill Cunningham 2012 - 2013</label>
    </listViews>
    <listViews>
        <fullName>Bounce_2012_2013</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>Actuals_Estimates__c</columns>
        <columns>Methodology__c</columns>
        <columns>Bounce_Daypart__c</columns>
        <columns>HH_RTG__c</columns>
        <columns>HH__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>bouncetv</value>
        </filters>
        <label>Bounce 2012 - 2013</label>
    </listViews>
    <listViews>
        <fullName>Bridezillas_2013_2014</fullName>
        <columns>NAME</columns>
        <columns>End_Date__c</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>Actuals_Estimates__c</columns>
        <columns>Methodology__c</columns>
        <columns>Start_Date__c</columns>
        <columns>RTG_Count__c</columns>
        <columns>HH_RTG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Season__c</field>
            <operation>equals</operation>
            <value>2013 - 2014</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>bridezillas</value>
        </filters>
        <label>Bridezillas 2013 - 2014</label>
    </listViews>
    <listViews>
        <fullName>Cheaters_Strip_2012_2013</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>Actuals_Estimates__c</columns>
        <columns>Methodology__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RTG_Count__c</columns>
        <columns>HH_RTG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Season__c</field>
            <operation>equals</operation>
            <value>2012 - 2013</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>cheaters strip</value>
        </filters>
        <label>Cheaters Strip 2012 - 2013</label>
    </listViews>
    <listViews>
        <fullName>Cheaters_Strip_2013_2014</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>Actuals_Estimates__c</columns>
        <columns>Methodology__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RTG_Count__c</columns>
        <columns>HH_RTG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Season__c</field>
            <operation>equals</operation>
            <value>2013 - 2014</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>cheaters strip</value>
        </filters>
        <label>Cheaters Strip 2013 - 2014</label>
    </listViews>
    <listViews>
        <fullName>Cheaters_Weekly_2009_2010</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>Actuals_Estimates__c</columns>
        <columns>Methodology__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RTG_Count__c</columns>
        <columns>HH_RTG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Season__c</field>
            <operation>equals</operation>
            <value>2009 - 2010</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>cheaters weekly</value>
        </filters>
        <label>Cheaters Weekly 2009 - 2010</label>
    </listViews>
    <listViews>
        <fullName>Cheaters_Weekly_2010_2011</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>Actuals_Estimates__c</columns>
        <columns>Methodology__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RTG_Count__c</columns>
        <columns>HH_RTG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Season__c</field>
            <operation>equals</operation>
            <value>2010 - 2011</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>cheaters weekly</value>
        </filters>
        <label>Cheaters Weekly 2010 - 2011</label>
    </listViews>
    <listViews>
        <fullName>Cheaters_Weekly_2011_2012</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>Actuals_Estimates__c</columns>
        <columns>Methodology__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RTG_Count__c</columns>
        <columns>HH_RTG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Season__c</field>
            <operation>equals</operation>
            <value>2011 - 2012</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>cheaters weekly</value>
        </filters>
        <label>Cheaters Weekly 2011 - 2012</label>
    </listViews>
    <listViews>
        <fullName>Cheaters_Weekly_2012_2013</fullName>
        <columns>NAME</columns>
        <columns>End_Date__c</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>Actuals_Estimates__c</columns>
        <columns>Methodology__c</columns>
        <columns>Start_Date__c</columns>
        <columns>RTG_Count__c</columns>
        <columns>HH_RTG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Season__c</field>
            <operation>equals</operation>
            <value>2012 - 2013</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>cheaters WEEKLY</value>
        </filters>
        <label>Cheaters Weekly 2012 - 2013</label>
    </listViews>
    <listViews>
        <fullName>Cheaters_Weekly_2013_2014</fullName>
        <columns>NAME</columns>
        <columns>End_Date__c</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>Actuals_Estimates__c</columns>
        <columns>Methodology__c</columns>
        <columns>Start_Date__c</columns>
        <columns>RTG_Count__c</columns>
        <columns>HH_RTG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Season__c</field>
            <operation>equals</operation>
            <value>2013 - 2014</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>cheaters WEEKLY</value>
        </filters>
        <label>Cheaters Weekly 2013 - 2014</label>
    </listViews>
    <listViews>
        <fullName>MMC</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>Actuals_Estimates__c</columns>
        <columns>Methodology__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RTG_Count__c</columns>
        <columns>HH_RTG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>monopoly</value>
        </filters>
        <label>MMC</label>
    </listViews>
    <listViews>
        <fullName>Paternity_Court_2013_2014</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>Actuals_Estimates__c</columns>
        <columns>Methodology__c</columns>
        <columns>RTG_Count__c</columns>
        <columns>HH_RTG__c</columns>
        <columns>HH__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>paternity court</value>
        </filters>
        <label>Paternity Court 2013 - 2014</label>
    </listViews>
    <listViews>
        <fullName>Wild_America</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>Actuals_Estimates__c</columns>
        <columns>Methodology__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RTG_Count__c</columns>
        <columns>HH_RTG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Wild America</value>
        </filters>
        <label>Wild America</label>
    </listViews>
    <listViews>
        <fullName>X2009_2010</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Season__c</columns>
        <columns>Actuals_Estimates__c</columns>
        <columns>Methodology__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>RTG_Count__c</columns>
        <columns>HH_RTG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Season__c</field>
            <operation>equals</operation>
            <value>2009 - 2010</value>
        </filters>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>cheaters strip</value>
        </filters>
        <label>Cheaters Strip 2009 - 2010</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rating Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>